--- a/book-service.properties
+++ b/book-service.properties
@@ -4,3 +4,5 @@ server.port=8083
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
 eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+eureka.client.instanceId= ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
