--- a/gateway.properties
+++ b/gateway.properties
@@ -16,3 +16,7 @@ zuul.routes.discovery.path=/discovery/**
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 zuul.routes.discovery.url=http://localhost:8082
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
+
+zuul.routes.uaa.path=/uaa/**
+zuul.routes.uaa.sensitive-headers=Set-Cookie,Authorization
+zuul.routes.uaa.serviceId=authserver
